move to hyperscript only, better swr calculation

--- a/data/index.html
+++ b/data/index.html
@@ -3,37 +3,48 @@
       <title>esp32swr</title>
       <meta charset="utf-8">
       <meta name="viewport" content="width=device-width">
-      <meta name="htmx-config" content='{"selfRequestsOnly":false}'>
-      <script src="/s/htmx.min.js"></script>
-      <script src="/s/client-side-templates.js"></script>
-      <script src="/s/mustache.js"></script>
+      <script src="/s/hyperscript.js"></script>
       <link rel="stylesheet" href="/s/pico.min.css"/>
    </head>
    <body>
       <main class="container">
       <h1>SWR</h1>
-      <div 
-           hx-ext="client-side-templates"
-           hx-get="/api/status" 
-           hx-target="#content"
-           mustache-template="status" hx-trigger="every 1s">
-         <table class="striped">
-            <thead><tr class="grid">
-               <th>fwd</th>
-               <th>rev</th>
-               <th>vswr</th>
-               <th>active_key</th>
-            </tr></thead>
-            <tbody id="content"></tbody>
+      <div>
+         <form class="grid" _="on load
+                   repeat forever 
+                     send check to <fieldset/>
+                     wait 1s
+                   end
+                 end 
+                ">
+            <fieldset _="on check 
+                            fetch /api/status as an Object 
+                            put it into st
+                            send status(st:st) to .status">
+               <button type="button" class="outline status" _="on status(st) 
+                                                    if st.auto_unlock == 'true' remove .outline from me else add .outline to me end
+                                                 on click if me matches .outline fetch /api/enable as an Object else fetch /api/disable as an Object end
+                                                    send check to <fieldset/>" id="auto_unlock">Enabled</button>
+               <button type="button" class="outline status" _="on status(st)
+                                                    if st.active_key == 'true' remove .outline from me else add .outline to me end" id="active_key">Active</button>
+            </fieldset>
+         </form> 
+         <table>
+            <tbody>
+               <tr>
+                  <th>fwd</th>
+                  <td class="status" _="on status(st) log st set my innerHTML to st.fwd" id="fwd"></td>
+               </tr>
+               <tr>
+                  <th>rev</th>
+                  <td class="status" _="on status(st) set my innerHTML to st.rev" id="rev"></td>
+               </tr>
+               <tr>
+                  <th>vswr</th>
+                  <td class="status" _="on status(st) set my innerHTML to st.vswr" id="vswr"></td>
+               </tr>
+            </tbody>
          </table>
-         <template id="status">
-            <tr class="grid">
-               <td>{{fwd}}</td>
-               <td>{{rev}}</td> 
-               <td>{{vswr}}</td>
-               <td>{{active_key}}</td>
-            </tr> 
-         </template>
       </div>
       </main>
    </body>
